add tweet button

--- a/views/index.haml
+++ b/views/index.haml
@@ -16,4 +16,5 @@
       %a{:href => 'https://twitter.com/#!/atmark1122'} 元ネタ
     %li
       %a{:href => 'https://twitter.com/#!/miminashi'} 作者
+= '<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-lang="ja">ツイート</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>'
 
