--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(http://twimg0-a.akamaihd.net/profile_images/1501570261/profile.png);
+  background-image: url(http://shibuhouse.com/wp-content/uploads/2011/10/haruya_01.jpg);
 }
 
 a {
