--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,12 +1,12 @@
 !!!
 %html
   %head
-    %title 変態女子高専生緊縛カレープレイ
+    %title ハルヤかよ・・・
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/layout.css'}
   %body
     .wrap
       %h1
-        %a{:href => '/'} 変態女子高専生緊縛カレープレイ
+        %a{:href => '/'} ハルヤかよ
       - if flash[:notice]
         .notice
           %p= flash[:notice]
