--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-%p 4:44に「変態女子高専生緊縛カレープレイ」と自動的にツィートします
+%p ハルヤ的な話題を自動的にツィートします
 - if @username
   %p== Welcome, #{@username}.
   %ul
@@ -13,7 +13,7 @@
     %li
       %a{:href => '/user/new'} 使う
     %li
-      %a{:href => 'https://twitter.com/#!/atmark1122'} 元ネタ
+      %a{:href => 'https://github.com/miminashi/MMNS4ji'} ソースコード
     %li
       %a{:href => 'https://twitter.com/#!/miminashi'} 作者
 = '<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-lang="ja">ツイート</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>'
